[package]
name = "stream_shared"
version = "0.8.4"
edition = "2021"
authors = ["Ankur Mittal"]
license = "Apache-2.0"
description = "A library for creating shareable streams that can be cloned and consumed by multiple consumers"
readme = "README.md"
repository = "https://github.com/ankurmittal/stream-shared-rs"
documentation = "https://docs.rs/stream_shared"
keywords = ["stream", "async", "clone", "shared"]
categories = ["asynchronous", "data-structures"]
exclude = ["target/", ".git/", ".gitignore"]

[features]
# Optional runtime stats (active clone counts). Disabled by default.
stats = []
default = []

[package.metadata.docs.rs]
features = ["stats"]

[lints.rust]
warnings = "deny"

[dependencies]
futures-util = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "tokio"] }
futures = "0.3"
static_assertions = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tokio-test = "0.4"

[[bench]]
name = "stream_contention_bench"
harness = false
